--- a/index.html
+++ b/index.html
@@ -3,61 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Web Page</title>
+    <title>Random Quote Generator</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0; /* Reset body margin */
+            position: relative; /* Position relative for the pseudo-element */
+            overflow: hidden; /* Prevent overflow from pseudo-element */
+        }
+        .background {
+            background: url('pattern.jpg') repeat; /* Repeat the background */
+            background-size: 500px; /* Set a fixed size for the background image */
+            opacity: 0.3; /* Set background opacity */
+            position: absolute; /* Position absolute to fill the body */
+            width: 100%;
+            height: 100%;
+            z-index: 0; /* Send background behind other content */
+        }
+        .card {
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 300px; /* Fixed width */
+            height: 300px; /* Fixed height for square */
+            display: flex;
+            flex-direction: column; /* Stack elements vertically */
+            justify-content: center;
+            align-items: center;
+            position: relative; /* Position relative for z-index */
+            z-index: 1; /* Bring card above background */
             padding: 20px;
         }
-        header {
-            background: #35424a;
-            color: #ffffff;
-            padding: 10px 0;
-            text-align: center;
+        .header {
+            font-size: 20px; /* Header font size */
+            font-weight: bold; /* Make header bold */
+            margin-bottom: 10px; /* Space below the header */
+            text-align: center; /* Center align header */
         }
-        nav {
-            margin: 20px 0;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #35424a;
-        }
-        section {
-            background: #ffffff;
-            padding: 20px;
+        .quote-box {
+            background: #f9f9f9; /* Light background for the quote box */
+            border: 1px solid #ccc;
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        footer {
+            padding: 15px;
+            width: 265px; /* Full width to match the card */
+            height: 150px; /* Fixed height for the quote box */
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-align: center;
-            margin-top: 20px;
-            color: #888;
+            font-size: 18px; /* Font size for quote */
+            color: #333; /* Color for quote text */
+            margin-bottom: 10px; /* Space between quote box and button */
+        }
+        #copyButton {
+            padding: 10px 15px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%; /* Full width to match the card */
+            box-sizing: border-box; /* Include padding in width */
+        }
+        #copyButton:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
 
-<header>
-    <h1>Welcome to My Web Page</h1>
-</header>
+<div class="background"></div> <!-- Background element -->
+<div class="card">
+    <div class="header">Daily Quote</div> <!-- Header -->
+    <div class="quote-box" id="quote"></div> <!-- Quote box -->
+    <button id="copyButton">Copy Quote</button>
+</div>
 
-<nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-</nav>
+<script>
+    const quotes = [
+        "The best way to predict the future is to create it.",
+        "Life is what happens when you're busy making other plans.",
+        "Get busy living or get busy dying.",
+        "You only live once, but if you do it right, once is enough.",
+        "In the end, we only regret the chances we didn't take."
+    ];
 
-<section>
-    <h2>About This Page</h2>
-    <p>This is a simple HTML template to get you started with web development. You can modify it as you wish!</p>
-</section>
+    function getRandomQuote() {
+        return quotes[Math.floor(Math.random() * quotes.length)];
+    }
 
-<footer>
-    <p>&copy; 2024 My Simple Web Page</p>
-</footer>
+    function displayQuote() {
+        const quoteDiv = document.getElementById('quote');
+        quoteDiv.innerText = getRandomQuote();
+    }
+
+    document.getElementById('copyButton').addEventListener('click', () => {
+        const quoteDiv = document.getElementById('quote');
+        navigator.clipboard.writeText(quoteDiv.innerText)
+            .then(() => alert('Quote copied to clipboard!'))
+            .catch(err => console.error('Error copying text: ', err));
+    });
+
+    // Display a random quote on page load
+    window.onload = displayQuote;
+</script>
 
 </body>
 </html>
