--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
     <meta property="og:title" content="Random Quote Generator" />
     <meta property="og:description" content="Generate Random quote Daily. Bless yourself with new things." />
-    <meta property="og:image" content="https://shantanu2645.github.io/pastejacking-awareness/thumbnail.jpg" />
-    <meta property="og:url" content="https://shantanu2645.github.io/pastejacking-awareness" />
+    <meta property="og:image" content="https://shantanudeyanik.github.io/pastejacking-awareness/thumbnail.jpg" />
+    <meta property="og:url" content="https://shantanudeyanik.github.io/pastejacking-awareness" />
     <meta property="og:type" content="website" />
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Random Quote Generator" />
     <meta name="twitter:description" content="Generate Random quote Daily. Bless yourself with new things." />
-    <meta name="twitter:image" content="https://shantanu2645.github.io/pastejacking-awareness/thumbnail.jpg" />
-    <meta name="twitter:url" content="https://shantanu2645.github.io/pastejacking-awareness" />
+    <meta name="twitter:image" content="https://shantanudeyanik.github.io/pastejacking-awareness/thumbnail.jpg" />
+    <meta name="twitter:url" content="https://shantanudeyanik.github.io/pastejacking-awareness" />
 
     <title>Random Quote Generator</title>
     <style>
